lang2/macro/tests/ui/fail/14-missing-storage-struct.stderr
error: no #[ink(storage)] struct found but expected exactly 1
 --> $DIR/14-missing-storage-struct.rs:5:1
  |
5 | #[ink::contract(version = "0.1.0")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
